# EDP_Billing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  EDP_Trade_Process_API_v2.docx  FEATURES.md  MOFSL_Covasant_WM_EDP_Billing_PRD_V1.0_21Jun2026.docx  Otel_Transformation.md  README.md  _tmp_docx_tables.txt  alembic.ini  demo_workflow.json  docker-compose.yml  docs_extract.txt  docx_dump.txt  edp_agent.db  prd_extracted.txt  requirements-local.txt  requirements.txt  ruff.toml  startup_check.txt  startup_check2.txt  status.json  test_workflow.json
alembic/: README  env.py  script.py.mako
app/: main.py
chat_ui/: app.js  index.html  style.css
docker/: Dockerfile  Dockerfile.local-test  README.md  docker-entrypoint.sh
docs/: COMPLETE_GUIDE.md  EDP_Trade_Process_API_v3.docx  SECRETS_ARCHITECTURE.md  edp_billing.dbml
global_email_service/: README.md  pyproject.toml
global_email_service/docker/: Dockerfile  docker-entrypoint.sh
global_email_service/examples/: sample_cash_all_passed.json  sample_mcx_recon_failure.json  sample_slbm_gtg_failed.json
global_email_service/src/global_email_service/: __init__.py  colors.py  config.py  demo.py  exceptions.py  graph_client.py  main.py  service.py  table_renderer.py
global_email_service/tests/: test_global_email_service.py
mock_cbos/: README.md  __init__.py  constants.py  main.py  state.py  steps.py
scripts/: dummy_cbos.py  generate_test_data.py  run_local_test.py  send_real_alert_demo.py  test_realtime_holiday_window.py
src/: __init__.py
tests/: README.md  __init__.py  (+45 more)
(+180 files in other folders)
