[project]
name = "global-email-service"
version = "1.0.0"
description = "JSON row(s) -> color-coded HTML/text email via Microsoft Graph. Usable as an in-process library (send_alert_email/send_segment_alert) or as a standalone FastAPI service (see the [api] extra)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Only needed to run this module as its own HTTP service (global_email_service/main.py).
# Pure in-process consumers (`from global_email_service import send_alert_email`)
# don't need this extra at all.
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/global_email_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
